Fixed: Border Around Title Removed: Erroneous </p> in index file

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 <body>
 <div class = "grid">
 	<div id = "header">
+		<div class = "title">
 			<h1>Rhon-Kaniel Bramwell</h1>
 			<h2>Systems Administrator / Web Developer</h2>
-		</p>
+		</div>
 	</div>
 	<div id = "sidebar">
 	<img class = "myimg" src = "images/mypic.jpg" alt = "My Picture">
