Changed grid template Fixed Thrift Job Description

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
 		<div id = "entry">
 			<h3 class = "date">2015 - Present</h3>
 			<h3 class = "description">Jamaica Civil Service Mutual Thrift Society / Systems Administrator</h3>
-			<p> Responsible for the installation, configuration and maintenance of all of the I.T. infrastructure of the Company</p>
+			<p> Responsible for modernizing the I.T. infrastructure of the Organization Including Introducing Virtualization,
+			Implementing Backup Procedures and Strategies Company-Wide including Off-Site Backups,
+			Developed Web Applications to Automate several manual systems resulting in a reduction of operational expenses,
+			Introduced Structured Cabling and Reorganized Data Cabinets, Implemented Take a Number Timing and Numbering system to Optimize Workflows, plus many more...
+			</p>
 		</div>
 		
 		<div id = "entry">
@@ -71,7 +75,7 @@
 		<li>HTML</li>
 		<li>CSS</li>
 		<li>JavaScript</li>
-		<li>PHP</li>
+		<li>PHP</li><br>
 		<li>SQL</li>
 		<li>Git</li>
 		<li>jQuery</li>
