--- a/index.html
+++ b/index.html
@@ -71,16 +71,21 @@
 		
 		<hr>
 		<h2>Skills / Expertise </h2>
-		<ul>
-		<li>HTML</li>
-		<li>CSS</li>
-		<li>JavaScript</li>
-		<li>PHP</li><br>
-		<li>SQL</li>
-		<li>Git</li>
-		<li>jQuery</li>
-		<li>Accessibility</li>
-		</ul>
+		<div id = "skills">
+			<ul>
+				<li>HTML</li>
+				<li>CSS</li>
+				<li>JavaScript</li>
+				<li>PHP</li>
+			</ul>
+			
+			<ul>
+				<li>SQL</li>
+				<li>Git</li>
+				<li>jQuery</li>
+				<li>Accessibility</li>
+			</ul>
+		</div>
 	</div>
 </div>
 </body>
